--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,3 +1,6 @@
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
 html,
 body {
   padding: 0;
@@ -9,6 +12,10 @@ body {
 a {
   color: inherit;
   text-decoration: none;
+}
+
+p{
+  opacity: 0;
 }
 
 * {
